watch_wasm/wasm_runner/target/release/build/cap-std-a9e01f46caf7ed08/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(can_vector)]
  | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(seek_convenience)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `seek_convenience` has been stable since 1.51.0 and no longer requires an attribute to enable
 --> <anon>:1:12
  |
1 | #![feature(seek_convenience)]
  |            ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(with_options)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `with_options` has been stable since 1.58.0 and no longer requires an attribute to enable
 --> <anon>:1:12
  |
1 | #![feature(with_options)]
  |            ^^^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(write_all_vectored)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
